[package]
name = "hyperscale-production"
version.workspace = true
edition.workspace = true
description = "Production runner with async I/O"

[[bin]]
name = "hyperscale-validator"
path = "src/bin/validator.rs"

[[bin]]
name = "hyperscale-keygen"
path = "src/bin/keygen.rs"

[features]
default = []
# Enable cross-node trace context propagation in messages.
# Only useful in testnets/devnets where all nodes are instrumented.
# Disabled by default for mainnet (no cross-node visibility anyway).
trace-propagation = ["hyperscale-messages/trace-propagation"]

[dependencies]
hyperscale-core.workspace = true
hyperscale-bft.workspace = true
hyperscale-engine.workspace = true
hyperscale-mempool.workspace = true
hyperscale-node.workspace = true
hyperscale-types.workspace = true
hyperscale-messages.workspace = true

# RocksDB for production persistence
rocksdb = "0.24"

# Networking - libp2p with QUIC transport
libp2p = { version = "0.56.0", features = ["gossipsub", "kad", "request-response", "quic", "tcp", "noise", "yamux", "tokio", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
sbor.workspace = true

# Async runtime
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rayon.workspace = true
parking_lot = "0.12"

# OpenTelemetry for distributed tracing
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"

# Tracing integration (version matched to opentelemetry 0.31.0)
tracing-opentelemetry = "0.32.0"

# Tracing subscriber for layer composition
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }

# Native Prometheus for metrics (not via OTEL - avoids translation issues)
prometheus = "0.14.0"

# JSON serialization for health check responses
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server for metrics endpoint
axum = "0.8.7"

# CLI and configuration (for validator binary)
clap = { version = "4", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"

# Radix types for genesis configuration parsing
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "92c7db3" }

# Cryptographic primitives for deterministic PeerId derivation
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Core pinning support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.5"
